# aeon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PUBLIC-READINESS.md  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  dependency-security.yml  nightly-fuzz.yml  publish-guard.yml  repo-hygiene.yml
docs/: release-strategy.md
docs/implementations/: diagnostic-alignment.md  implementation-guideline.md
docs/implementations/python/: README.md
docs/implementations/rust/: README.md
docs/implementations/rust/api/: sdk-proposal.md
docs/implementations/typescript/: README.md  limits-and-policies.md
docs/implementations/typescript/api/: aeos.md  cli.md  core.md  finalize.md  parser.md  profiles.md  runtime.md  sdk-proposal.md
docs/scripts/: README.md  canonical-and-stress.md  repo-paths.md  source-lanes.md
implementations/python/: README.md  poc_recursion.py  pyproject.toml
implementations/python/src/aeon/: __init__.py  aeos.py  annotations.py  api.py  ast.py  canonical.py  cli.py  core.py  errors.py  finalize.py  lexer.py  parser.py  preamble.py  spans.py
implementations/python/tests/: test_aeos.py  test_annotations.py  test_api.py  test_canonical.py  test_cli.py  test_core.py  test_finalize.py  test_preamble.py  test_stress.py
implementations/python/tools/: compare_with_typescript.py  perf_annotations.py  run_cts.py
implementations/rust/: Cargo.toml  README.md  deny.toml
implementations/rust/crates/aeon-aeos/: Cargo.toml
implementations/rust/crates/aeon-aeos/src/: lib.rs
implementations/rust/crates/aeon-annotations/: Cargo.toml
implementations/rust/crates/aeon-annotations/src/: lib.rs
implementations/rust/crates/aeon-canonical/: Cargo.toml
implementations/rust/crates/aeon-canonical/src/: lib.rs
implementations/rust/crates/aeon-cli/: Cargo.toml
implementations/rust/crates/aeon-cli/src/: main.rs
implementations/rust/crates/aeon-core/: Cargo.toml
implementations/rust/crates/aeon-core/src/: flatten.rs  header.rs  lexer.rs  lib.rs  pathing.rs  temporal.rs  token_parser.rs  validation.rs
implementations/rust/crates/aeon-finalize/: Cargo.toml
implementations/rust/crates/aeon-finalize/src/: lib.rs
implementations/rust/crates/aeon-sdk/: Cargo.toml
implementations/rust/crates/aeon-sdk/src/: lib.rs
implementations/typescript/: README.md  package.json  pnpm-lock.yaml  poc_pp.ts  tsconfig.base.json
implementations/typescript/internal-release/: README.md  SHA256SUMS  manifest.json
implementations/typescript/tools/: depcheck.mjs
implementations/typescript/tools/aeon-lsp/: README.md  package.json
scripts/: README.md  bench-cli.py  canonical-cts.sh  check-no-local-paths.sh  check-typescript-lifecycle-scripts.mjs  check-typescript-lockfile.sh  check-typescript-publish-surface.mjs  compare-canonical-implementations.py  cts-source-lane-runner.mjs  ensure-typescript-build.mjs  pack-sdk-internal.sh  pre-commit-check.sh  release-cut.sh  repo-paths.mjs  repo_paths.py  resign-rust-release.sh  run-with-repo-paths.mjs  stress-canonical-snippets.py  stress-combinations.py  stress-diagnostic-snippets.py  stress-fixtures.py  stress-negative-snippets.py  stress-positive-snippets.py  stress-smoke.sh  stress-whitespace-mutations.py
stress-tests/: README.md
stress-tests/canonical/: README.md  node-introducer-multiline.aeon  node-introducer-singleline.aeon  node-legacy-reject.aeon  node-mixed-separators.aeon  node-trailing-separator.aeon
stress-tests/domain/addressing/: escaped-decoded-identity-pointers.aeon  escaped-decoded-identity-rooted.aeon  escaped-decoded-identity.aeon  escaped-normalization-distinct-keys.aeon  escaped-quoted-keys.aeon  namespace-quoted-keys.aeon  nesting-addressing.aeon
stress-tests/domain/comments/: comment-stress-slash-channels.aeon  r5-comment-notes.md
stress-tests/domain/literals/: heterogeneous-inline-nesting.aeon  inline-array-literals-pass.aeon  leading-dot-decimals.aeon  trimticks-mixed-whitespace.aeon  unicode-escape-pair.aeon  unicode-unpaired-surrogates.aeon
stress-tests/edge/: comment-stress-unterminated.aeon  escaped-decoded-identity-duplicate.aeon  inline-array-separator-boundaries.aeon  string-literal-newline.aeon  trailing-garbage-after-list.aeon  trailing-garbage-after-node.aeon  trailing-garbage-after-number.aeon  trailing-garbage-after-object.aeon  trailing-garbage-after-reference.aeon  trailing-garbage-after-string.aeon  unicode-braced-incomplete.aeon  unicode-braced-missing-close.aeon  unicode-braced-nonhex.aeon  unicode-invalid-escape.aeon  unicode-line-separator-structural.aeon  unicode-out-of-range-escape.aeon  unicode-word-joiner-structural.aeon
stress-tests/full/: full-feature-stress.aeon  scenarios.aeon
stress-tests/matrices/: literal-mode-combinations.toml
stress-tests/snippets/: diagnostic-parity.json  invalid.aeon-cases  negative-custom.aeon-cases  negative-strict.aeon-cases  negative-transport.aeon-cases  positive-custom.aeon-cases  positive-strict.aeon-cases  positive-transport.aeon-cases  valid.aeon-cases  whitespace-seeds.aeon-cases
stress-tests/tools/aeon-52-cards/: README.md  SPEC-ALIGNMENT-REVIEW.md  package-lock.json  package.json
stress-tests/tools/aeon-incremental-fuzz/: README.md  package.json  run-incremental-fuzz.js  run-minimize.js
stress-tests/tools/aeon-stress-cli/: .gitignore  README.md  package-lock.json  package.json
(+74 files in other folders)
