[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon-python"
version = "0.1.0"
description = "Dependency-free Python implementation of the AEON core parser"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "AEON maintainers" }
]

[project.scripts]
aeon-python = "aeon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
