[workspace]
members = [
    "crates/aeon-sdk",
    "crates/aeon-aeos",
    "crates/aeon-annotations",
    "crates/aeon-canonical",
    "crates/aeon-cli",
    "crates/aeon-core",
    "crates/aeon-finalize",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/altopelago/Aeon"
rust-version = "1.88"
version = "0.9.0"

[workspace.dependencies]
aeon-sdk = { path = "crates/aeon-sdk", version = "0.9.0" }
aeon-aeos = { path = "crates/aeon-aeos", version = "0.9.0" }
aeon-annotations = { path = "crates/aeon-annotations", version = "0.9.0" }
aeon-canonical = { path = "crates/aeon-canonical", version = "0.9.0" }
aeon-cli = { path = "crates/aeon-cli", version = "0.9.0" }
aeon-core = { path = "crates/aeon-core", version = "0.9.0" }
aeon-finalize = { path = "crates/aeon-finalize", version = "0.9.0" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
