[package]
name = "aeon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeon-aeos = { path = "../aeon-aeos" }
aeon-annotations = { path = "../aeon-annotations" }
aeon-canonical = { path = "../aeon-canonical" }
aeon-core = { path = "../aeon-core" }
aeon-finalize = { path = "../aeon-finalize" }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
pkcs8 = { version = "0.10.2", features = ["pem"] }

[[bin]]
name = "aeon-rust"
path = "src/main.rs"

[lints]
workspace = true
