[package]
name = "aeon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeon-aeos.workspace = true
aeon-annotations.workspace = true
aeon-canonical.workspace = true
aeon-core.workspace = true
aeon-finalize.workspace = true
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
pkcs8 = { version = "0.10.2", features = ["pem"] }

[[bin]]
name = "aeon-rust"
path = "src/main.rs"

[lints]
workspace = true
