[package]
name = "aeon-finalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeon-core = { path = "../aeon-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
