[package]
name = "aeon-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeon-aeos = { path = "../aeon-aeos" }
aeon-core = { path = "../aeon-core" }
aeon-finalize = { path = "../aeon-finalize" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
